--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,6 @@
 	<groupId>edu.cmu.lti.11791.f12.hw2</groupId>
 	<artifactId>hw2-team11</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	  <scm>	
-	    <connection>scm:git:git@github.com:pradeep-gnr/hw1-ppravind.git</connection>
-	    <developerConnection>scm:git:git@github.com:pradeep-gnr/hw1-ppravind.git</developerConnection>
-	  </scm>
 	<repositories>
 		<repository>
 			<id>oaqa</id>
@@ -53,18 +49,32 @@
 			</plugin>
 		</plugins>
 	</build>
+	<scm>
+		<connection>scm:git:git@github.com:pradeep-gnr/hw2-team11.git</connection>
+		<developerConnection>scm:git:git@github.com:pradeep-gnr/hw2-team11.git</developerConnection>
+	</scm>
 	<dependencies>
-		<dependency>
-			<groupId>org.jsoup</groupId>
-			<artifactId>jsoup</artifactId>
-			<version>1.3.3</version>
-		</dependency>
 
-
-		<dependency>
-			<groupId>edu.cmu.lti.oaqa.openqa</groupId>
-			<artifactId>helloqa</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
-		</dependency>
+	<dependency>
+		<groupId>org.jsoup</groupId>
+		<artifactId>jsoup</artifactId>
+		<version>1.3.3</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>edu.cmu.lti.oaqa.openqa</groupId>
+		<artifactId>helloqa</artifactId>
+		<version>1.0.1-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+		<groupId>edu.washington.cs.knowitall.stanford-corenlp</groupId>
+		<artifactId>stanford-postag-models</artifactId>
+		<version>1.3.2</version>
+	</dependency>
+	<dependency>
+		<groupId>edu.stanford.nlp</groupId>
+		<artifactId>stanford-corenlp</artifactId>
+		<version>1.3.3</version>
+	</dependency>
 	</dependencies>
 </project>
