--- a/src/main/resources/hellobioqa/hellobioqa.yaml
+++ b/src/main/resources/hellobioqa/hellobioqa.yaml
@@ -15,6 +15,7 @@ pipeline:
     name: keyterm-extractor
     options: |
       - inherit: helloqa.keyterm.simple
+      - inherit: hellobioqa.team11.keyterm.hankh-keyterm-extractor
 
   - inherit: jdbc.sqlite.cse.phase 
     name: retrieval-strategist
