--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,10 @@
 	<groupId>edu.cmu.lti.11791.f12.hw2</groupId>
 	<artifactId>hw2-team11</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	  <scm>	
+	    <connection>scm:git:git@github.com:pradeep-gnr/hw1-ppravind.git</connection>
+	    <developerConnection>scm:git:git@github.com:pradeep-gnr/hw1-ppravind.git</developerConnection>
+	  </scm>
 	<repositories>
 		<repository>
 			<id>oaqa</id>
@@ -55,7 +59,11 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.3.3</version>
 		</dependency>
-
+		<dependency>
+    	<groupId>abner</groupId>
+    	<artifactId>abner</artifactId>
+    	<version>1.5</version>
+    </dependency>
 
 		<dependency>
 			<groupId>edu.cmu.lti.oaqa.openqa</groupId>
