--- a/src/main/resources/hellobioqa/hellobioqa.yaml
+++ b/src/main/resources/hellobioqa/hellobioqa.yaml
@@ -15,11 +15,11 @@ pipeline:
     name: keyterm-extractor
     options: |
       - inherit: helloqa.keyterm.simple
-
-      - inherit: hellobioqa.team11.keyterm.ppravindKeyterm	
+      
+      - inherit: hellobioqa.team11.keyterm.ppravindKeyterm  
       - inherit: hellobioqa.team11.keyterm.hankh-keyterm-extractor
       - inherit: hellobioqa.team11.zhiqilKeytermExtractor
-      - inherit: hellobioqa.team11.kkanal_keyterm_extractor      
+      - inherit: hellobioqa.team11.kkanal_keyterm_extractor   
 
   - inherit: jdbc.sqlite.cse.phase 
     name: retrieval-strategist
@@ -30,6 +30,7 @@ pipeline:
     name: passage-extractor
     options: |
       - inherit: hellobioqa.passage.simple
+      - inherit: hellobioqa.team11.passage.lucene-passage-extractor
       
   - inherit: helloqa.eval.keyterm-aggregator-consumer
 
