--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/Users/Administrator/Desktop/新建文件夹/stanford-parser-2012-11-12/stanford-parser-2012-11-12/stanford-parser-2.0.4-models.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
