--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
     	<artifactId>abner</artifactId>
     	<version>1.5</version>
     </dependency>		
+	<dependency>
+		<groupId>edu.washington.cs.knowitall.stanford-corenlp</groupId>
+		<artifactId>stanford-parse-models</artifactId>
+		<version>1.3.2</version>
+	</dependency>
 	</dependencies>
 </project>
 
