--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.cmu.lti.11791.f12.hw2</groupId>
 	<artifactId>hw2-team11</artifactId>
-	<version>0.0.5</version>
+	<version>0.0.6-SNAPSHOT</version>
 	  <scm>	
 	    <connection>scm:git:git@github.com:pradeep-gnr/hw2-team11.git</connection>
 	    <developerConnection>scm:git:git@github.com:pradeep-gnr/hw2-team11.git</developerConnection>
