--- a/src/main/resources/hellobioqa/hellobioqa.yaml
+++ b/src/main/resources/hellobioqa/hellobioqa.yaml
@@ -14,22 +14,21 @@ pipeline:
   - inherit: jdbc.sqlite.cse.phase  
     name: keyterm-extractor
     options: |
-      - inherit: helloqa.keyterm.simple
-      - inherit: hellobioqa.team11.keyterm.ppravindKeyterm	
-      - inherit: hellobioqa.team11.keyterm.ppravindNounPhraseExtractor      
-      - inherit: hellobioqa.team11.zhiqilKeytermExtractor
-      - inherit: hellobioqa.team11.kkanal_keyterm_extractor   
+      - inherit: hellobioqa.team11.keyterm.zhiqilKeytermExtractor2
+
 
   - inherit: jdbc.sqlite.cse.phase 
     name: retrieval-strategist
     options: |
       - inherit: hellobioqa.retrieval.simple-solr-strategist
+
+
           
   - inherit: jdbc.sqlite.cse.phase  
     name: passage-extractor
     options: |
       - inherit: hellobioqa.passage.simple
-      - inherit: hellobioqa.team11.passage.lucene-passage-extractor
+
       
   - inherit: helloqa.eval.keyterm-aggregator-consumer
 
