updated 2 keyterm extractors and 2 re-ranking document retrieval approaches, and update trecgen06.passage.

--- a/src/main/resources/hellobioqa/hellobioqa.yaml
+++ b/src/main/resources/hellobioqa/hellobioqa.yaml
@@ -14,6 +14,7 @@ pipeline:
   - inherit: jdbc.sqlite.cse.phase  
     name: keyterm-extractor
     options: |
+      - inherit: hellobioqa.team11.keyterm.zhiqilKeytermExtractor
       - inherit: hellobioqa.team11.keyterm.zhiqilKeytermExtractor2
 
 
@@ -21,7 +22,8 @@ pipeline:
     name: retrieval-strategist
     options: |
       - inherit: hellobioqa.retrieval.simple-solr-strategist
-
+      - inherit: hellobioqa.team11.retrieval.zhiqil-retrieval
+      - inherit: hellobioqa.team11.retrieval.zhiqil-retrieval2
 
           
   - inherit: jdbc.sqlite.cse.phase  
