--- a/src/main/resources/hellobioqa/hellobioqa.yaml
+++ b/src/main/resources/hellobioqa/hellobioqa.yaml
@@ -13,17 +13,17 @@ collection-reader:
 pipeline:
   - inherit: jdbc.sqlite.cse.phase  
     name: keyterm-extractor
-    options: |
-      - inherit: helloqa.keyterm.simple
-      - inherit: hellobioqa.team11.keyterm.ppravindKeyterm	
-      - inherit: hellobioqa.team11.keyterm.ppravindNounPhraseExtractor      
-      - inherit: hellobioqa.team11.zhiqilKeytermExtractor
-      - inherit: hellobioqa.team11.kkanal_keyterm_extractor   
+    options: |      
+      - inherit: hellobioqa.team11.keyterm.zhiqilKeytermExtractor
+      - inherit: hellobioqa.team11.keyterm.zhiqilKeytermExtractor2
+  
 
   - inherit: jdbc.sqlite.cse.phase 
     name: retrieval-strategist
     options: |
-      - inherit: hellobioqa.retrieval.simple-solr-strategist
+
+      - inherit: hellobioqa.team11.retrieval.simple-solr-strategist
+  
           
   - inherit: jdbc.sqlite.cse.phase  
     name: passage-extractor
